Fix repo name to take fork into account

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "thibaud-dauce/mattermost-php",
+    "name": "tomcodes/mattermost-php",
     "description": "Mattermost PHP driver to send incoming webhooks",
     "homepage": "https://github.com/thibaud-dauce/mattermost-php",
     "type": "library",
